# fast-upload

./: .gitignore  Dockerfile.upload-init-lambda  Dockerfile.valpipe  LICENSE.md  README.md  basic_usage.md  mkdocs.yml  pipe_entry.py  pyproject.toml  setup.py  toy-1-populated.yml  upload-init-lambda-requirements.txt  valpipe-requirements.txt  valpipe_entrypoint.sh
.github/workflows/: lint_and_test.yml  test.yml
docs/: basic_usage.md  configuration.md  index.md  label_schema.md  reference.md  transfer_system.md
extras/fast_toy_dataset/: toy-1.yml
extras/fast_toy_dataset/bad_data/asdf/: data_0.asdf  data_1.asdf
extras/fast_toy_dataset/bad_data/fits/: data_0.fits  data_1.fits
extras/fast_toy_dataset/bad_data/parquet/: data_0.parquet  data_1.parquet
extras/fast_toy_dataset/data/asdf/: data_0.asdf  data_1.asdf
extras/fast_toy_dataset/data/fits/: data_0.fits  data_1.fits
extras/fast_toy_dataset/data/parquet/: data_0.parquet  data_1.parquet
mast_transfer_tools/: __init__.py  errors.py  label_meta.py  labels.py  types.py
mast_transfer_tools/admin/: __init__.py  cli.py
mast_transfer_tools/config/: __init__.py
mast_transfer_tools/describe/: __init__.py  asdf.py  fits.py  generic.py  parquet.py
mast_transfer_tools/io/: __init__.py  asdf.py  fits.py  parquet.py  s3.py
mast_transfer_tools/lambda_/: __init__.py  _client_responses.py  core.py  s3_write.py
mast_transfer_tools/s3log/: __init__.py  helpers.py  s3tsvreader.py  s3tsvwriter.py
mast_transfer_tools/server/: __init__.py  core.py  messages.py  state.py
mast_transfer_tools/tests/: filedata.py  mock_buckets.py  mock_s3log.py  test_cognito.py  test_describe_asdf.py  test_describe_fits.py  test_describe_parquet.py  test_io_asdf.py  test_io_s3.py  test_label_objects.py  test_label_parsing.py  test_lambda.py  test_s3_tsv_reader.py  test_s3_tsv_writer.py  test_server.py  test_upload_cli.py  test_upload_client.py  test_utilz.py  test_utilz_compression.py  test_validation_asdf.py  test_validation_fits.py  test_validation_generic.py  test_validation_parquet.py
mast_transfer_tools/upload/: __init__.py  cli.py  client.py  cognito.py  upload.py
mast_transfer_tools/utilz/: __init__.py  cli.py  compression.py  english.py  futures.py  locks.py  name_reference.py  numeric.py  shims.py  stat.py
mast_transfer_tools/validation/: __init__.py  asdf.py  fits.py  generic.py  parquet.py
scripts/: gen_ref_pages.py
