# pyproject.toml documentation for reference:
#   https://packaging.python.org/en/latest/
#   https://setuptools.pypa.io/en/latest/userguide/

[project]
name          = "mast_transfer_tools"
version       = "1.0.0"
description   = "Upload data sets to MAST using the new FAST protocol"
readme        = "README.md"
license       = "BSD-3-Clause"
license-files = ["LICENSE.md"]

authors = [
    { name = "Michael St. Clair", email = "mstclair@millionconcepts.com" },
    { name = "Zack Weinberg",     email = "zack@millionconcepts.com"     },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: System :: Archiving"
]

requires-python = ">=3.11"
dependencies = [
    "asdf",
    "asdf-astropy",
    "astropy",
    "click",
    "hostess[aws]",
    "pyarrow",
    "s3fs",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "hypothesis",
]
typecheck = [
    "mypy",
    "pandas-stubs",
    "pyarrow-stubs",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.urls]
Repository = "https://github.com/MillionConcepts/fast-upload"

[project.scripts]
mast-upload = "mast_transfer_tools.upload.cli:main"
mast-transfer-admin = "mast_transfer_tools.admin.cli:main"

[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "mast_transfer_tools",
    "mast_transfer_tools.*",
]
namespaces=false
where = ["."]


# Recommended for new projects by pytest manual.
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]


## Type checker configuration
[tool.mypy]
# Keep this list in sync with the setuptools package discovery
# configuration above.
packages = [
    "mast_transfer_tools",
]
# Start from maximum strictness, disable any inappropriate checks.
strict = true
# Redefinition (e.g. `thing = str(thing)`) is idiomatic in our code.
allow_redefinition = true
# Ensure package discovery doesn't go off into the weeds.
mypy_path = "$MYPY_CONFIG_FILE_DIR/"
namespace_packages = false

[[tool.mypy.overrides]]
# Project dependencies that currently do not have type annotations.
module = [
   "asdf.*",
   "astropy.*",
   "botocore.*",
   "dustgoggles.*",
   "hostess.*",
]
ignore_missing_imports = true

## Lint configuration
[tool.ruff]
# These need to agree with .editorconfig
line-length = 79
indent-width = 4
# This needs to agree with the requires-python line
target-version = "py311"

[tool.ruff.lint]
# There are lots more checks ruff can do but this is a sensible default.
# Unfortunately, many of the other lint groups combine high-value checks
# with much lower-value or purely stylistic checks.
#
# To facilitate maintenance, this list should be kept in the same order
# as the list of groups in <https://docs.astral.sh/ruff/rules/>.
select = [
    "ANN",      # missing type annotations
    "FBT",      # forbid boolean positional arguments (keyword args are ok)
    "RET",      # missing return values
    # "TC",     # debatable rules about type-only imports
    "SIM115",   # open() without 'with' block (other SIM checks are debatable)
    "NPY",      # warns about deprecated NumPy APIs
    "PD",       # warns about deprecated Pandas APIs
    "PT",       # warns about a variety of easy mistakes when writing tests
    "E1",       # inconsistent indentation (stylistic but very important)
    # "E2",     # purely stylistic rules about whitespace around operators
    # "E3",     # purely stylistic rules about blank lines
    "E4",       # import-related mistakes
    "E5",       # backslash-related mistakes
    # "E6",     # there are no E6xx rules
    "E7",       # more code that can be simplified,
    # "E8",     # there are no E8xx rules
    "E9",       # I/O errors while running ruff
    "W",        # mostly whitespace errors; also, invalid \-escapes in strings
    "F",        # grab bag of constructs that are almost certainly wrong
    "PGH",      # no blanket lint annotations
]
ignore = [
    # forbids all use of Any; we genuinely need it in a few places
    "ANN401",
    # stylistic rule (line length) lumped in with E5
    "E501",
    # better addressed by not using fonts in which l/I/1 or 0/O are
    # visually ambiguous
    "E741",
    # stylistic rule lumped with RET ("never use 'else' after an
    # if block ending with a 'return'"; in many cases the version
    # with the 'else' is easier to read)
    "RET505",
    # stylistic rule (line length in docstrings) lumped in with W
    "W505",
]
